create screen of lab technician

--- a/10.2.0/aspnet-core/src/EMRSystem.Web.Host/appsettings.json
+++ b/10.2.0/aspnet-core/src/EMRSystem.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=EMRSystemDb; Trusted_Connection=True; TrustServerCertificate=True;"
+    "Default": "Data Source=NIKHIL\\SQLEXPRESS; Database=EMRSystemDb; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate=True;"
   },
   "App": {
     "ServerRootAddress": "https://localhost:44311/",
