--- a/10.2.0/aspnet-core/src/EMRSystem.Migrator/appsettings.json
+++ b/10.2.0/aspnet-core/src/EMRSystem.Migrator/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=EMRSystemDb; Trusted_Connection=True; TrustServerCertificate=True;"
+    "Default": "Data Source=NIKHIL\\SQLEXPRESS; Database=EMRSystemDb; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate=True;"
   }
 }
