-> Implemented a structured sidebar with role-based access, permissions, and routing for all user types. -> Developed the Appointment module, including listing, full CRUD operations, and UI design. -> Worked on adding localization support for roles and permissions throughout the application.

--- a/10.2.0/angular/src/tsconfig.app.json
+++ b/10.2.0/angular/src/tsconfig.app.json
@@ -1,5 +1,16 @@
 {
     "extends": "./tsconfig.json",
-    "files": ["main.ts", "polyfills.ts"],
-    "include": ["src/**/*.d.ts", "typings.d.ts"]
+    "files": [
+        "main.ts",
+        "polyfills.ts"
+    ],
+    "include": [
+        "src/**/*.d.ts",
+        "typings.d.ts"
+    ],
+    "compilerOptions": {
+        "outDir": "./out-tsc/app",
+        "types": [],
+        "composite": true // <-- ADD THIS LINE
+    },
 }
