-> Integrated the Prescription Module with backend APIs.  -> Refactored the Angular module structure to align with current requirements, removing redundant or unused modules.  -> Currently implementing custom filter and search functionality in Appointment.

--- a/10.2.0/angular/src/tsconfig.spec.json
+++ b/10.2.0/angular/src/tsconfig.spec.json
@@ -15,6 +15,6 @@
         "types": [
             "jasmine"
         ],
-        "composite": true // <-- ADD THIS LINE
-    },
+        "composite": true, // <-- ADD THIS LINE,
+    }
 }
