--- a/10.2.0/angular/angular.json
+++ b/10.2.0/angular/angular.json
@@ -33,6 +33,7 @@
                         ],
                         "styles": [
                             "node_modules/famfamfam-flags/dist/sprite/famfamfam-flags.css",
+                            "node_modules/primeicons/primeicons.css",
                             "node_modules/sweetalert2/dist/sweetalert2.css",
                             "src/assets/freeze-ui/freeze-ui.css",
                             "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
