--- a/10.2.0/aspnet-core/src/EMRSystem.Web.Host/appsettings.json
+++ b/10.2.0/aspnet-core/src/EMRSystem.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=EMRSystemDb; Trusted_Connection=True; TrustServerCertificate=True;"
+    "Default": "Data Source=DESKTOP-Q2LTTR1; Database=EMRSystemDb; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate=True;"
   },
   "App": {
     "ServerRootAddress": "https://localhost:44311/",
@@ -32,5 +32,8 @@
   },
   "Swagger": {
     "ShowSummaries": false
+  },
+  "Abp": {
+    "SendAllExceptionsToClients": true
   }
 }
