--- a/10.2.0/aspnet-core/src/EMRSystem.Application/EMRSystem.Application.csproj
+++ b/10.2.0/aspnet-core/src/EMRSystem.Application/EMRSystem.Application.csproj
@@ -12,6 +12,9 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\EMRSystem.Core\EMRSystem.Core.csproj" />
   </ItemGroup>
 </Project>
