--- a/10.2.0/angular/package.json
+++ b/10.2.0/angular/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@microsoft/signalr": "^8.0.7",
     "@primeng/themes": "^19.0.9",
+    "@stripe/stripe-js": "^7.4.0",
     "abp-ng2-module": "12.1.0",
     "abp-web-resources": "^6.1.0",
     "admin-lte-css-only": "^3.2.0",
