--- a/10.2.0/aspnet-core/src/EMRSystem.Application/EMRSystem.Application.csproj
+++ b/10.2.0/aspnet-core/src/EMRSystem.Application/EMRSystem.Application.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
+    <PackageReference Include="Stripe.net" Version="48.3.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EMRSystem.Core\EMRSystem.Core.csproj" />
