--- a/10.2.0/aspnet-core/src/EMRSystem.Core/EMRSystem.Core.csproj
+++ b/10.2.0/aspnet-core/src/EMRSystem.Core/EMRSystem.Core.csproj
@@ -18,5 +18,6 @@
     <PackageReference Include="Abp.AutoMapper" Version="10.2.0" />
     <PackageReference Include="Abp.ZeroCore.EntityFrameworkCore" Version="10.2.0" />
     <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="4.1.0" />
+    <PackageReference Include="Stripe.net" Version="48.3.0" />
   </ItemGroup>
 </Project>
