--- a/10.2.0/aspnet-core/src/EMRSystem.Web.Core/EMRSystem.Web.Core.csproj
+++ b/10.2.0/aspnet-core/src/EMRSystem.Web.Core/EMRSystem.Web.Core.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.5" />
+    <PackageReference Include="Stripe.net" Version="48.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4" />
     <PackageReference Include="Abp.AspNetCore" Version="10.2.0" />
     <PackageReference Include="Abp.ZeroCore" Version="10.2.0" />
