--- a/10.2.0/aspnet-core/test/EMRSystem.Tests/EMRSystem.Tests.csproj
+++ b/10.2.0/aspnet-core/test/EMRSystem.Tests/EMRSystem.Tests.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="NSubstitute" Version="5.3.0" />
     <PackageReference Include="Shouldly" Version="4.3.0" />
+    <PackageReference Include="Stripe.net" Version="48.3.0" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.extensibility.execution" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.0">
