create lab test for ipd and opd patient

--- a/10.2.0/aspnet-core/src/EMRSystem.Application/EMRSystem.Application.csproj
+++ b/10.2.0/aspnet-core/src/EMRSystem.Application/EMRSystem.Application.csproj
@@ -17,5 +17,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EMRSystem.Core\EMRSystem.Core.csproj" />
+    <ProjectReference Include="..\EMRSystem.EntityFrameworkCore\EMRSystem.EntityFrameworkCore.csproj" />
   </ItemGroup>
 </Project>
