--- a/10.2.0/aspnet-core/src/EMRSystem.Application/EMRSystem.Application.csproj
+++ b/10.2.0/aspnet-core/src/EMRSystem.Application/EMRSystem.Application.csproj
@@ -19,4 +19,7 @@
     <ProjectReference Include="..\EMRSystem.Core\EMRSystem.Core.csproj" />
     <ProjectReference Include="..\EMRSystem.EntityFrameworkCore\EMRSystem.EntityFrameworkCore.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Procedure\Dto\" />
+  </ItemGroup>
 </Project>
