--- a/10.2.0/angular/package.json
+++ b/10.2.0/angular/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@microsoft/signalr": "^8.0.7",
     "@primeng/themes": "^19.0.9",
+    "@primeuix/themes": "^1.2.3",
     "@stripe/stripe-js": "^7.4.0",
     "abp-ng2-module": "12.1.0",
     "abp-web-resources": "^6.1.0",
@@ -39,7 +40,7 @@
     "ngx-bootstrap": "^19.0.2",
     "ngx-pagination": "^6.0.3",
     "primeicons": "^7.0.0",
-    "primeng": "^19.0.9",
+    "primeng": "^19.1.4",
     "push.js": "1.0.12",
     "rtl-detect": "^1.1.2",
     "rxjs": "^7.8.2",
