-> Worked on creating and binding the Lab Results, Billing Summary, and Discharge Instructions sections in the Discharge Summary page. -> Developed an API to retrieve the complete data in a single DTO with mapping. -> Added logic for handling multiple clearances required for the final discharge approval.

--- a/10.2.0/angular/package.json
+++ b/10.2.0/angular/package.json
@@ -42,6 +42,7 @@
     "primeicons": "^7.0.0",
     "primeng": "^19.1.4",
     "push.js": "1.0.12",
+    "quill": "^2.0.3",
     "rtl-detect": "^1.1.2",
     "rxjs": "^7.8.2",
     "sweetalert2": "^11.17.2",
