--- a/10.2.0/aspnet-core/src/EMRSystem.EntityFrameworkCore/EMRSystem.EntityFrameworkCore.csproj
+++ b/10.2.0/aspnet-core/src/EMRSystem.EntityFrameworkCore/EMRSystem.EntityFrameworkCore.csproj
@@ -8,6 +8,7 @@
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="EFCore.BulkExtensions" Version="9.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.9">
       <PrivateAssets>all</PrivateAssets>
