--- a/10.2.0/angular/package.json
+++ b/10.2.0/angular/package.json
@@ -32,6 +32,7 @@
     "abp-ng2-module": "12.1.0",
     "abp-web-resources": "^6.1.0",
     "admin-lte-css-only": "^3.2.0",
+    "chart.js": "^4.5.0",
     "core-js": "^3.41.0",
     "famfamfam-flags": "^1.0.0",
     "lodash-es": "^4.17.21",
