--- a/10.2.0/aspnet-core/src/EMRSystem.Migrator/EMRSystem.Migrator.csproj
+++ b/10.2.0/aspnet-core/src/EMRSystem.Migrator/EMRSystem.Migrator.csproj
@@ -16,6 +16,11 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Abp.Castle.Log4Net" Version="10.3.0" />
+    <PackageReference Include="BouncyCastle.NetCore" Version="2.2.1" />
+    <PackageReference Include="itext7" Version="9.3.0" />
+    <PackageReference Include="itext7.bouncy-castle-adapter" Version="9.3.0" />
+    <PackageReference Include="itext7.pdfhtml" Version="6.2.1" />
+    <PackageReference Include="QuestPDF" Version="2025.7.1" />
     <PackageReference Include="Stripe.net" Version="48.5.0" />
   </ItemGroup>
   <ItemGroup>
