--- a/10.2.0/aspnet-core/src/EMRSystem.Web.Core/EMRSystem.Web.Core.csproj
+++ b/10.2.0/aspnet-core/src/EMRSystem.Web.Core/EMRSystem.Web.Core.csproj
@@ -23,7 +23,12 @@
     <ProjectReference Include="..\EMRSystem.EntityFrameworkCore\EMRSystem.EntityFrameworkCore.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="BouncyCastle.NetCore" Version="2.2.1" />
+    <PackageReference Include="itext7" Version="9.3.0" />
+    <PackageReference Include="itext7.bouncy-castle-adapter" Version="9.3.0" />
+    <PackageReference Include="itext7.pdfhtml" Version="6.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.9" />
+    <PackageReference Include="QuestPDF" Version="2025.7.1" />
     <PackageReference Include="Stripe.net" Version="48.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.4" />
     <PackageReference Include="Abp.AspNetCore" Version="10.3.0" />
