--- a/10.2.0/aspnet-core/src/EMRSystem.Migrator/EMRSystem.Migrator.csproj
+++ b/10.2.0/aspnet-core/src/EMRSystem.Migrator/EMRSystem.Migrator.csproj
@@ -17,6 +17,8 @@
   <ItemGroup>
     <PackageReference Include="Abp.Castle.Log4Net" Version="10.3.0" />
     <PackageReference Include="BouncyCastle.NetCore" Version="2.2.1" />
+    <PackageReference Include="Hangfire" Version="1.8.21" />
+    <PackageReference Include="Hangfire.SqlServer" Version="1.8.21" />
     <PackageReference Include="itext7" Version="9.3.0" />
     <PackageReference Include="itext7.bouncy-castle-adapter" Version="9.3.0" />
     <PackageReference Include="itext7.pdfhtml" Version="6.2.1" />
