--- a/10.2.0/aspnet-core/test/EMRSystem.Tests/EMRSystem.Tests.csproj
+++ b/10.2.0/aspnet-core/test/EMRSystem.Tests/EMRSystem.Tests.csproj
@@ -16,6 +16,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="BouncyCastle.NetCore" Version="2.2.1" />
+    <PackageReference Include="Hangfire" Version="1.8.21" />
+    <PackageReference Include="Hangfire.SqlServer" Version="1.8.21" />
     <PackageReference Include="itext7" Version="9.3.0" />
     <PackageReference Include="itext7.bouncy-castle-adapter" Version="9.3.0" />
     <PackageReference Include="itext7.pdfhtml" Version="6.2.1" />
