--- a/10.2.0/angular/package.json
+++ b/10.2.0/angular/package.json
@@ -35,6 +35,9 @@
     "chart.js": "^4.5.0",
     "core-js": "^3.41.0",
     "famfamfam-flags": "^1.0.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.12.1",
+    "jspdf": "^3.0.3",
     "lodash-es": "^4.17.21",
     "moment": "2.30.1",
     "moment-timezone": "0.5.47",
